Upgrade to JSE 1.1.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,10 @@ jdk: oraclejdk7
 
 language: scala
 
-# These directories are cached to S3 at the end of the build
-cache:
-  directories:
-    - $HOME/.ivy2/cache
-    - $HOME/.sbt/boot/
-
 scala:
   - 2.10.5
 
 script:
+  - rm -rf $HOME/.sbt
+  - rm -rf $HOME/.ivy2
   - sbt ++$TRAVIS_SCALA_VERSION -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M scripted
-
-  # Tricks to avoid unnecessary cache updates
-  - find $HOME/.sbt -name "*.lock" | xargs rm
-  - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
