--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Run tests
-      run: sbt test
+      run: sbt scripted
     - name: Cache
       uses: actions/cache@v2.0.0
       with:
